--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ CortanaSelfBot/obj/Release/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADC
 CortanaSelfBot/obj/Release/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
 CortanaSelfBot/obj/Release/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
 .idea/.idea.CortanaSelfBot/riderModule.iml___jb_tmp___
+*.suo
