--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,6 @@ CortanaSelfBot/obj/Release/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221d
 CortanaSelfBot/obj/Release/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
 .idea/.idea.CortanaSelfBot/riderModule.iml___jb_tmp___
 *.suo
+*.png
+*.jpg
+*.gif
