--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ CortanaSelfBot/obj/Release/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B1
 *.png
 *.jpg
 *.gif
+CortanaSelfBot/bin/Debug/CortanaSelfBot.vshost.exe.manifest
